# dxp-todo-frontend

./: .env  .gitignore  .gitmodules  Cargo.toml  Cranky.toml  Dioxus.toml  README.md  TODO  build.rs.bak  database.db  index.html  input.css  notes.md  tailwind.config.js  update_backend.sh
.github/workflows/: rust.yml
api/: swagger.json
backend/: .gitignore  Cargo.toml  build.rs  swagger.json  swagger.json.patched  swagger.yaml
backend/src/: lib.rs
heart/: Cargo.toml  build.rs
heart/src/: cold.rs  hot.rs  lib.rs
heart/src/app/: mod.rs
heart/src/css/: initializer.rs  mod.rs  paths.rs
heart/src/error/: contextual_error.rs  error_middleware.rs  log_err_ext.rs
heart/src/routes/: mod.rs
heart/src/routes/index/: handler.rs  index.jinja
heart/src/routes/test/: hello.rs  session.rs
heart/src/server/: endpoint.rs  error_layer.rs  mod.rs
heart/src/server/session/: api_database_pool.rs
heart/src/server/state/: mod.rs  watcher.rs
heart/src/templates/: initializer.rs  mod.rs
heart/src/web/: mod.rs
i18n/: initializer.rs  mod.rs  watcher.rs
migration/: Cargo.toml
migration-runner/: Cargo.toml
migration-runner/src/: lib.rs  migration.rs
migration/src/: lib.rs  m20220101_000001_create_table.rs
public/: tailwind.css
server/: .gitignore  Cargo.toml  build.rs  build.rs.bak
server/src/: api_storage.rs  cold.rs  endpoint.rs  endpoints.rs  hot.rs  lib.rs  main.rs  server.rs  session.rs  templates.rs  tracing_layer.rs  web.rs
server/src/css/: initializer.rs  mod.rs  watcher.rs
server/src/endpoints/: index.jinja  index.rs  mod.rs  state.rs  watcher.rs
server/src/endpoints/error/: 404.jinja  contextual_error.rs  error_middleware.rs  mod.rs
server/src/endpoints/i18n/: initializer.rs  mod.rs  watcher.rs
server/src/endpoints/i18n/de-DE/: errors.ftl  simple.ftl
server/src/endpoints/i18n/en-US/: simple.ftl
server/src/endpoints/routes/: mod.rs
server/src/endpoints/routes/index/: errors.rs  index.jinja  index3.rs  mod.rs  texts.rs
server/src/endpoints/session/: api_storage.rs  language.rs  mod.rs
server/src/endpoints/state/: i18n.rs  mod.rs  watcher.rs
server/src/endpoints/templates/: initializer.rs  mod.rs  watcher.rs
server/src/error/: contextual_error.rs  mod.rs
server/src/i18n/: initializer.rs  watcher.rs
server/src/i18n/en-US/: errors.ftl
server/src/initializers/: templates.rs
server/src/routes/: mod.rs
server/src/routes/index/: index.rs  index3.jinja  index3.rs  mod.rs
server/src/routes/static/: mod.rs
server/src/routes/test/: mod.rs
server/src/server/: mod.rs
server/src/server/session/: cookie_key.rs
server/src/session/: api_database_pool.rs  api_storage.rs  language.rs  mod.rs
server/src/state/: default_language.rs  mod.rs  watcher.rs
server/src/templates/: mod.rs  watcher.rs
server/src/watchers/: mod.rs  templates_watcher.rs
server/src/web/: mod.rs
src/: hot_libs.rs  lib.rs  main.rs  main_task.rs  observe.rs  unwound.rs  web.rs
src/app/: mod.rs
src/server/: cold.rs  dummy.rs  hot.rs  hot_libs.rs  main_task.rs  mod.rs  observe.rs  path_info.rs
