[workspace]
resolver = "2"
members = ["heart"]

[package]
name = "dxp-todo-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hot-lib-reloader = { version = "^0.7.0", optional = true }
heart = { path = "heart", optional = true, default-features = false }
dotenvy = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["rt-multi-thread", "signal", "sync", "time", "macros"] }
tracing = { workspace = true, optional = true }
dxp-logging = { workspace = true, optional = true, default-features = false }

[workspace.dependencies]
dotenvy = { version = "^0.15.7" }
tokio = { version = "^1.37.0", default-features = false }
anyhow = { version = "^1.0.89", features = ["backtrace"] }
tracing = "^0.1.40"
serde = { version = "^1.0.203", features = ["derive"] }
base64 = "^0.22.1"
chrono = {version = "^0.4.38", default-features = false, features = ["clock"]}
serde_json = { version = "^1.0.68" }
arc-swap = "1.7.1"
notify = { version ="6.1.1", default-features = false }
include_dir = { version = "0.7.3" }
derivative = "2.2.0"
thiserror = "1.0.61"
backend = { path = "backend"}
dxp-logging = { git = "https://github.com/887/dxp-logging.git", default-features = false }
dxp-code-loc = { git = "https://github.com/887/dxp-code-loc.git" }
is_executable = { version ="1.0.4" }
axum = { version = "0.7.5", features = ["http2", "macros"] }
axum-server = "0.7.1"
tower = "0.5.1"
tower-http = { version = "0.6.0", features = ["compression-zstd", "trace"] }
axum_session = { version = "0.14.0" }
# dioxus-sdk = { version = "0.5.0", features = ["i18n"] }
dioxus = { version = "0.5.6" }
dioxus-hot-reload = "0.5.6"
dioxus-i18n = "0.2.5"
dioxus-fullstack = "0.5.6"
dioxus-web = { version = "0.5.6", features = ["hydrate"] }

#warning:
#dependencies and features should not share the same name
#cargo pulls the dependency even if it's just a crate feature

[features]
# default = []
# default = ["web"]
# default = ["server"]
# default = ["server", "log"] # <- this only works with cargo run, not in vscode
# default = ["server", "log", "hot-reload"]
server = [
    "dep:hot-lib-reloader",
    "dep:heart",
    "dep:dotenvy",
    "dep:tokio",
    "dep:tracing",
    "heart/server",
    "log",
    "hot-reload"
]
web = ["heart/web"]
github = ["heart/github"]
path-info = []
hot-reload = ["dep:hot-lib-reloader", "heart/hot-reload"]
log=["dep:dxp-logging", "heart/log"]
log-file=["log", "dxp-logging/log-file", "heart/log-file"]

