[workspace]
resolver = "2"
members = ["server"]

[package]
name = "dxp-todo-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
dotenvy = { version = "^0.15.7" }
tokio = { version = "^1.40.0", default-features = false }
anyhow = { version = "^1.0.90", features = ["backtrace"] }
tracing = "^0.1.40"
serde = { version = "^1.0.203", features = ["derive"] }
base64 = "^0.22.1"
chrono = {version = "^0.4.38", default-features = false, features = ["clock"]}
serde_json = { version = "^1.0.132" }
arc-swap = "1.7.1"
include_dir = { version = "0.7.3" }
derivative = "2.2.0"
thiserror = "2.0.3"
backend = { path = "backend"}
dxp-logging = { git = "https://github.com/887/dxp-logging.git", default-features = false }
dxp-code-loc = { git = "https://github.com/887/dxp-code-loc.git" }
is_executable = { version ="1.0.4" }
axum = { version = "0.7.5", features = ["http2", "macros"] }
axum-server = "0.7.1"
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["compression-zstd", "trace"] }
axum_session = { version = "0.14.0" }
# dioxus-sdk = { version = "0.5.0", features = ["i18n"] }
dioxus = { version = "0.6.0-alpha.4", features = ["fullstack", "router"] }
dioxus-cli-config = "0.6.0-alpha.4"
dioxus-i18n = "0.2.5"

[dependencies]
anyhow = { workspace = true }
server = { path = "server", optional = true, default-features = false }
dotenvy = { workspace = true, optional = true }
serde = { workspace = true }
tracing = { workspace = true }
dxp-logging = { workspace = true, optional = true, default-features = false }
tokio = { workspace = true, optional = true,features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time"
]}
axum = { workspace = true, optional = true }
dioxus-logger = "0.5.1"
dioxus = { workspace = true }
dioxus-cli-config = { workspace = true, optional = true }
dioxus-i18n = { workspace = true, optional = true }
wasm-bindgen = "0.2.95"
web-sys = { version = "0.3.72", features = ["MediaDevices", "MediaStream", "MediaStreamConstraints", "HtmlVideoElement", "Navigator"] }
wasm-bindgen-futures = "0.4.45"

#warning:
#dependencies and features should not share the same name
#cargo pulls the dependency even if it's just a crate feature

[features]
# default = ["hot-reload"]
server-axum = []
default = []
server = [
    "dep:server",
    "dep:dotenvy",
    "log",

    "dep:tokio",
    "dep:axum",
    "dioxus/axum",
    "dioxus-cli-config",
    "server-axum"
]
web = [
    "dep:dioxus-i18n",

    "dioxus/web"
]
desktop = []
github = []
path-info = []
log=["dep:dxp-logging", "server/log"]
log-file=["log", "dxp-logging/log-file", "server/log-file"]

