[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.6.0"
futures-core = "0.3.30"
percent-encoding = "2.3.1"
reqwest = { version = "0.11.27", default-features=false, features = ["json", "stream"] }
serde = { version = "^1.0.200", features = ["derive"] }
serde_json = "1.0.117"
serde_urlencoded = "0.7.1"
futures = "0.3"
progenitor-client = "0.7.0"

[build-dependencies]
prettyplease = "^0.2.20"
progenitor = "^0.7.0"
serde_json = "^1.0.117"
syn = "^2.0"
reqwest = { version = "0.11.27", default-features=false, features = ["stream", "blocking"] }
