[package]
name = "heart"
version = "0.1.0"
edition = "2021"

[lib]
name = "heart"
crate-type = ["rlib", "dylib"]

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
dotenvy = { workspace = true }
dxp-code-loc = { workspace = true }

dxp-logging = { workspace = true, optional = true, default-features = false }

arc-swap = { workspace = true , optional = true }

[build-dependencies]
is_executable = { workspace = true }

[features]
#default features are the ones that hot reload uses to build when saving a file
default = ["log", "hot-reload"]
github = []

hot-reload = ["dep:arc-swap"]
redis = []
log=["dep:dxp-logging"]
log-file=["log", "dxp-logging/log-file"]

