[package]
name = "migration-runner"
version = "0.1.0"
edition = "2021"

[lib]
name = "migration_runner"
crate-type = ["rlib", "dylib"]

[dependencies]
migration = { workspace = true }
sea-orm = { workspace = true, features = [
    "sea-orm-internal"
] }
tokio = { workspace = true, features = ["rt-multi-thread", "signal", "net"] }
dxp-db-open = { workspace = true, default-features = false }
tracing = { workspace = true }
dxp-logging = { workspace = true, optional = true, default-features = false }

[features]
default = ["sqlite-rustls", "hot-reload"]
hot-reload = []
mysql-rustls = ["sea-orm/runtime-tokio-rustls", "sea-orm/sqlx-mysql", "dxp-db-open/mysql-rustls"]
mysql-native-tls = ["sea-orm/runtime-tokio-native-tls", "sea-orm/sqlx-mysql", "dxp-db-open/mysql-native-tls"]
sqlite-rustls = ["sea-orm/runtime-tokio-rustls", "sea-orm/sqlx-sqlite", "dxp-db-open/sqlite-rustls"]
sqlite-native-tls = ["sea-orm/runtime-tokio-native-tls", "sea-orm/sqlx-sqlite", "dxp-db-open/sqlite-native-tls"]
postgres-rustls = ["sea-orm/runtime-tokio-rustls", "sea-orm/sqlx-postgres", "dxp-db-open/postgres-rustls"]
postgres-native-tls = ["sea-orm/runtime-tokio-native-tls", "sea-orm/sqlx-postgres", "dxp-db-open/postgres-native-tls"]
log=["dep:dxp-logging", "dxp-logging/log"]
log-file=["log", "dxp-logging/log-file"]
