[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]
name = "server"
crate-type = ["rlib", "dylib"]

[dependencies]
dxp-logging = { workspace = true, optional = true, default-features = false }
poem = { workspace = true, features = ["embed", "static-files", "compression", "session", "i18n"]}
dotenvy = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "signal", "net", "sync", "process"] }
tracing = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
# serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true }
minijinja = { workspace = true }
arc-swap = { workspace = true , optional = true }
notify = {workspace = true, optional = true, default-features = false, features = ["macos_kqueue"]}
include_dir = { workspace = true }
derivative = { workspace = true }
backend = { workspace = true }
dxp-code-loc = { workspace = true }
thiserror = { workspace = true }
is_executable = { workspace = true, optional = true }
simd-json = { workspace = true, optional = true }

[build-dependencies]
is_executable = { workspace = true }

[features]
#default features are the ones that hot reload uses to build when saving a file
default = ["log", "hot-reload", "simd-json"]
simd-json = ["dep:simd-json"]
github = []
hot-reload = ["dep:arc-swap", "dep:notify", "dep:is_executable"]
redis = []
log=["dep:dxp-logging", "dxp-logging/log"]
log-file=["log", "dxp-logging/log-file"]

