[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]
name = "server"
crate-type = ["rlib", "dylib"]

[dependencies]
dxp-logging = { workspace = true, optional = true, default-features = false }
dotenvy = { workspace = true, optional = true}
tokio = { workspace = true, optional = true, features = ["rt-multi-thread", "signal", "net", "sync", "process"] }
tracing = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
base64 = { workspace = true, optional = true}
serde = { workspace = true, optional = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
arc-swap = { workspace = true , optional = true }
notify = {workspace = true, optional = true, default-features = false, features = ["macos_kqueue"]}
include_dir = { workspace = true, optional = true }
derivative = { workspace = true, optional = true }
backend = { workspace = true, optional = true}
dxp-code-loc = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
is_executable = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
axum-server = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
axum_session = { workspace = true, optional = true }
# dioxus-sdk = { workspace = true, features = ["i18n"] }
dioxus = { workspace = true, optional = true, features = ["web"] }
dioxus-i18n = { workspace = true, optional = true }
dioxus-hot-reload = { workspace = true, optional = true }
dioxus-fullstack = { workspace = true, optional = true }
dioxus-web = { workspace = true, optional = true }

[build-dependencies]
is_executable = { workspace = true }

[features]
#default features are the ones that hot reload uses to build when saving a file
default = ["server", "log", "hot-reload"]
github = []
server = [
    "dep:dotenvy",
    "dep:tokio",
    "dep:tracing",
    "dep:anyhow",
    "dep:base64",
    "dep:serde",
    "dep:serde_json",
    "dep:chrono",
    "dep:arc-swap",
    "dep:include_dir",
    "dep:derivative",
    "dep:backend",
    "dep:dxp-code-loc",
    "dep:thiserror",
    "dep:is_executable",
    "dep:axum",
    "dep:axum-server",
    "dep:tower-http",
    "dep:tower",
    "dep:axum_session",
    "dep:dioxus",
]
web = [
    "dioxus-web", 
    "dep:dioxus-i18n",
    "dep:dioxus-hot-reload",
    "dep:dioxus-fullstack",
]
hot-reload = ["dep:arc-swap", "dep:notify"]
redis = []
log=["dep:dxp-logging"]
log-file=["log", "dxp-logging/log-file"]

