[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
dotenvy = { workspace = true }
dxp-code-loc = { workspace = true }
dxp-logging = { workspace = true, optional = true, default-features = false }

backend = { workspace = true }

[features]
#default features are the ones that hot reload uses to build when saving a file
default = ["log"]
github = []

redis = []
log=["dep:dxp-logging"]
log-file=["log", "dxp-logging/log-file"]

